using System;
using System.Collections.Generic;
using System.Text;

namespace Checkers_Server
{
    class AiPlayer : IPlayer 
    {
        //TODO: AiPlayer
    }
}
