using System;
using System.Collections.Generic;
using System.Text;

namespace Checkers_Server
{
    class HumanPlayer : IPlayer
    {
        //TODO: HumanPlayer
    }
}
