@startuml
' syntax: 
' https://plantuml.com/class-diagram

class Pawn 

class Board 

class Cell
Cell --* Board

Enum Color {
    WHITE
    BLACK
}
Enum PawnType
{
    NORMAL
    QUEEN
}

Abstract IPlayer {
    GetColor() : Color
}

class HumanPlayer implements IPlayer

class AiPlayer implements IPlayer


interface Memento {
    --
    _MetaData_
    getName()
    getSnapshotDate()
}

class BoardSnaphot implements Memento 
class GameSnaphot implements Memento 

class GameMaster {
    makeSnapshot() : GameSnaphot
    restore(GameSnaphot) : void
    GetCurrentPlayer() : IPlayer
}

class Board {
    makeSnapshot() : BoardSnaphot
    restore(Snaphot)
}

Interface IRuleSet {
    Winner(List<IPlayer>) : IPlayer
    GetAllMoves(IPlayer, Board) : List<Move>
    GetAllMovesForPawn(IPlayer, Board, Pawn) : List<Move>
}

class ClassicCheckers implements IRuleSet

class PapyCheckers implements IRuleSet

GameMaster --> IRuleSet : "rules"
GameMaster --> IPlayer : "current_player"
GameMaster --> Board : "board"

' IPlayer "1" -- "*" Pawn
Cell -- Pawn


RuleSet --> Move : creates


class Move {
    DoMove(Board) : void
    UndoMove(Board) : void
    GetChainedMoves() : List<Move>
}

class MoveFactory {
    {static} ForwardLeft(Board, Pawn)
    {static} ForwardRight(Board, Pawn)
    {static} EatForwardLeft(Board, Pawn)
    {static} EatForwardRight(Board, Pawn)
    {static} EatBackwardLeft(Board, Pawn)
    {static} EatBackwardLeft(Board, Pawn)
}


@enduml